# app/docs/swagger.yaml
@@ -1,5 +1,10 @@
 basePath: /api/v1
 definitions:
+  model.ErrorResponse:
+    properties:
+      error:
+        type: string
+    type: object
   model.FoundPost:
     properties:
       found_id:
@@ -48,6 +53,13 @@ definitions:
       title:
         type: string
     type: object
+  model.SavedPost:
+    properties:
+      post_id:
+        type: integer
+      user_id:
+        type: string
+    type: object
   model.Signup:
     properties:
       password:
@@ -58,6 +70,11 @@ definitions:
         type: string
       username:
         example: john_doe
+        type: string
+    type: object
+  model.SuccessResponse:
+    properties:
+      message:
         type: string
     type: object
   model.User:
@@ -235,6 +252,67 @@ paths:
       summary: Get posts from specific user
       tags:
       - posts
+  /savedPost/saved_posts:
+    post:
+      consumes:
+      - application/json
+      description: Create a new saved post
+      parameters:
+      - description: Saved post information
+        in: body
+        name: saved_post
+        required: true
+        schema:
+          $ref: '#/definitions/model.SavedPost'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: Saved post created successfully
+          schema:
+            $ref: '#/definitions/model.SuccessResponse'
+        "400":
+          description: Bad request
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      summary: Create a new saved post
+      tags:
+      - saved_posts
+  /savedPost/saved_posts/{user_id}:
+    get:
+      consumes:
+      - application/json
+      description: Get all saved posts for a specific user by user ID
+      parameters:
+      - description: User ID
+        in: path
+        name: user_id
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: List of saved posts
+          schema:
+            items:
+              $ref: '#/definitions/model.SavedPost'
+            type: array
+        "404":
+          description: Not found
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+        "500":
+          description: Internal server error
+          schema:
+            $ref: '#/definitions/model.ErrorResponse'
+      summary: Retrieve all saved posts for a user
+      tags:
+      - saved_posts
   /users:
     post:
       consumes:
